add minimal example for dynamic imports in inline bundle

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,7 @@
-<!doctype html> 
+<!DOCTYPE html>
 <link href="index.css" rel="stylesheet" />
 <main class="error">When you see me, something went wrong</main>
 <script src="index.js"></script>
+<script>
+  import("./dynamic.js");
+</script>
